tests/baselines/reference/objectTypeWithConstructSignatureHidingMembersOfFunctionAssignmentCompat.errors.txt
tests/cases/conformance/types/members/objectTypeWithConstructSignatureHidingMembersOfFunctionAssignmentCompat.ts(8,1): error TS2322: Type 'Object' is not assignable to type 'I'.
  Signature 'new (): any' has no corresponding signature in 'Object'
tests/cases/conformance/types/members/objectTypeWithConstructSignatureHidingMembersOfFunctionAssignmentCompat.ts(14,1): error TS2322: Type 'Object' is not assignable to type 'new () => any'.
  Signature 'new (): any' has no corresponding signature in 'Object'


==== tests/cases/conformance/types/members/objectTypeWithConstructSignatureHidingMembersOfFunctionAssignmentCompat.ts (2 errors) ====
    interface I {
        new(): any;
    }
    
    var i: I;
    var f: Object;
    f = i;
    i = f;
    ~
!!! error TS2322: Type 'Object' is not assignable to type 'I'.
!!! error TS2322:   Signature 'new (): any' has no corresponding signature in 'Object'
    
    var a: {
        new(): any
    }
    f = a;
    a = f;
    ~
!!! error TS2322: Type 'Object' is not assignable to type 'new () => any'.
!!! error TS2322:   Signature 'new (): any' has no corresponding signature in 'Object'